refactored custom db handlign to solve fingerprint issue, and prepare for remote spec libs